--- a/src/components/pages/LoginPage/login.module.css
+++ b/src/components/pages/LoginPage/login.module.css
@@ -2,18 +2,20 @@
   border: 1rem solid white;
   margin: auto;
   margin-top: 6%;
-  width: 40rem;
-  height: 45rem;
+  width: 30rem;
+  height: 37rem;
   align-items: center;
   box-shadow: 0rem 0rem 6rem;
   border-radius: 3%;
+  font-size: smaller;
 }
 
 .body {
   border: 1rem solid white;
   margin: auto;
-  width: 30rem;
-  height: 30rem;
+  margin-top: -1%;
+  width: 20rem;
+  height: 20rem;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -22,10 +24,10 @@
 }
 
 .Icon {
-margin-top: 3%;
+margin-top: 1%;
 display: flex;
-gap: 17rem;
-font-size: 2rem;
+gap: 13rem;
+font-size: 1.4rem;
 }
 .content3 {
 border-bottom: 1px solid black;
@@ -42,4 +44,7 @@ margin-bottom: 1rem;
   background-color: white;
   padding: 0 0.5rem;
 }
+}
+.Alert{
+
 }
