--- a/src/components/pages/RegisterPage/register.module.css
+++ b/src/components/pages/RegisterPage/register.module.css
@@ -1,18 +1,20 @@
 .b{
   border: 1rem solid white;
   margin: auto;
-  margin-top: 8%;
-  width: 40rem;
-  height: 45rem;
+  margin-top: 6%;
+  width: 30rem;
+  height: 37rem;
   align-items: center;
   box-shadow: 0rem 0rem 6rem;
   border-radius: 3%;
+  font-size: smaller;
 }
 .body {
   border: 1rem solid white;
   margin: auto;
-  width: 30rem;
-  height: 30rem;
+  margin-top: -1%;
+  width: 20rem;
+  height: 20rem;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -21,14 +23,10 @@
 }
 
 .Icon {
-  position: sticky;
-  margin-top: 3%;
+  margin-top: 1%;
   display: flex;
-  flex-direction: row;
-  align-items: start;
-  padding-left: 5px;
-  gap: 17rem;
-  font-size: 2rem;
+  gap: 13rem;
+  font-size: 1.4rem;
 }
 .or{
   border-bottom: 1px solid black;
@@ -37,7 +35,7 @@
   flex-direction: column;
   align-items: center;
   padding: 0rem;
-  margin-bottom: 1rem;
+  margin-bottom: -1rem;
   & > span {
     position: absolute;
     left: calc(20% 1.5px);
